test/library/standard/Random/stonea/permutationAssociative.good
permutationAssociative.chpl:5: error: 'permutation' only supports 1D rectangular arrays whose domain idxType is compatible with eltType
